<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <!-- App name -->
    <string name="app_name">LTC</string>
    <!-- Tab headers-->
    <string name="fragment_thickness">Thickness</string>
    <string name="fragment_compare">Compare</string>
    <string name="fragment_diameter">Diameter</string>
    <string name="fragment_transposition">Transposition</string>
    <string name="menu_item_settings">Settings</string>
    <!-- New app block -->
    <string name="new_app_name">Spectra</string>
    <string name="new_app_try_it">Try our new app</string>
    <string name="new_app_button">READ MORE</string>
    <string name="new_app_download">Download</string>
    <string name="new_app_our_new_app">Our New App</string>
    <string name="new_app_b2b_platform">B2B platform for opticians and workshops in the ophthalmology industry</string>
    <string name="new_app_step_1">Register</string>
    <string name="new_app_step_2">Create an order</string>
    <string name="new_app_step_3">Track progress</string>
    <string name="new_app_get_it_on_google_play">Get it on Google Play</string>
    <string name="new_app_for_optic">For Opticians</string>
    <string name="new_app_for_workshop">For Workshops</string>
    <!-- Thickness hints -->
    <string name="tab_thkns_material_index">Index of refraction</string>
    <string name="tab_thkns_sphere_power">Sphere power</string>
    <string name="tab_thkns_cylinder_power">Cylinder power</string>
    <string name="tab_thkns_axis">Axis</string>
    <string name="tab_thkns_base_curve">Real base curve</string>
    <string name="tab_thkns_center_thickness">Center thickness</string>
    <string name="tab_thkns_edge_thickness">Edge thickness</string>
    <string name="tab_thkns_lens_diameter">Lens diameter</string>
    <string name="tab_thkns_provide_center_thickness">Please, provide center thickness</string>
    <string name="tab_thkns_button">Calculate</string>
    <!-- Diameter hints -->
    <string name="tab_diameter_hint_ed">Effective diameter</string>
    <string name="tab_diameter_hint_dbl">Distance between lenses</string>
    <string name="tab_diameter_hint_pd">Pupil distance</string>
    <string name="lens_diameter_result">ED x 2 + DBL - PD = %1$.0f mm</string>
    <!-- Result -->
    <string name="result_index_of_refraction">Index of refraction: %1$s</string>
    <string name="result_sphere_power">Sphere power: %1$.2f</string>
    <string name="result_cylinder_power">Cylinder power: %1$.2f</string>
    <string name="result_axis">Axis: %1$s&#176;</string>
    <string name="result_on_axis_thickness">Thickness on axis %1$s&#176;: %2$s mm</string>
    <string name="result_center_thickness">Center thickness: %1$s mm</string>
    <string name="result_min_edge_thickness">Minimum thickness: %1$s mm</string>
    <string name="result_max_edge_thickness">Maximum thickness: %1$s mm</string>
    <string name="result_base_curve">Base curve: %1$s</string>
    <string name="result_diameter">Diameter: %1$s mm</string>
    <string name="result_add_to_list">Add to compare list</string>
    <string name="result_remove_from_list">Remove from compare list</string>
    <string name="result_share">Share</string>
    <!-- Transposition -->
    <string name="transposition_power_sphere">Sphere</string>
    <string name="transposition_power_cylinder">Cylinder</string>
    <string name="transposition_axis">Axis</string>
    <string name="transposition_result">Sphere power: %1$s\nCylinder power: %2$s\nAxis: %3$d&#176;</string>
    <!-- Share result -->
    <string name="share_result_subject">Lens data</string>
    <string name="share_with">Share with…</string>
    <string name="share_text_only_sphere">Calculated via %1$s\n%2$s\nIndex of refraction = %3$s\nSphere power = %4$s\nCenter thickness = %5$s mm\nEdge thickness = %6$s mm\nReal base curve = %7$s\nDiameter = %8$s mm</string>
    <string name="share_text_full">Calculated via %1$s\n%2$s\nIndex of refraction = %3$s\nSphere power = %4$s\nCylinder Power = %5$s\nAxis = %6$s&#176;\nThickness on axis %7$s&#176; = %8$s mm\nCenter thickness = %9$s mm\nEdge thickness = %10$s mm\nMax thickness = %11$s mm\nReal base curve = %12$s\nDiameter = %13$s mm</string>
    <!-- About program -->
    <string name="about_version" translatable="false">Version %1$s</string>
    <string name="about_developed_by" translatable="false">Developed by Andriy Parkhomov</string>
    <string name="about_button" translatable="false">Close</string>
    <string name="about_email" translatable="false">parkhomov.andrew@gmail.com</string>
    <string name="translate_to_brazilian_portuguese" translatable="false">Traduzido para o português: Edison Bucchianico Gil</string>
    <!-- Language and Theme -->
    <string name="language_title">Language</string>
    <string name="theme_title">Theme</string>
    <string name="theme_auto">Auto</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <!-- Compare list -->
    <string name="compare_list_index_of_refraction">Index</string>
    <string name="compare_list_sphere_power">Sphere</string>
    <string name="compare_list_cylinder_power">Cylinder</string>
    <string name="compare_list_axis">Axis</string>
    <string name="compare_list_on_axis_thickness">Thk axis</string>
    <string name="compare_list_center_thickness">Thk cntr</string>
    <string name="compare_list_min_edge_thickness">Thk min</string>
    <string name="compare_list_max_edge_thickness">Thk max</string>
    <string name="compare_list_base_curve">Curve</string>
    <string name="compare_list_diameter">Diameter</string>
    <string name="compare_list_is_empty_title">List is empty</string>
    <string name="compare_list_is_empty_description">You can add lens in compare list after calculation</string>
    <string name="compare_clear_list">Clear list</string>
    <string-array name="titles" >
        <item>Index of refraction</item>
        <item>Sphere power</item>
        <item>Cylinder power</item>
        <item>Axis</item>
        <item>Real base curve</item>
        <item>Center thickness</item>
        <item>Edge thickness</item>
        <item>Diameter</item>
        <item>Effective diameter</item>
        <item>Distance between lenses</item>
        <item>Pupil distance</item>
        <item>Transposition</item>
    </string-array>
    <string-array name="descriptions" >
        <item>In optics, the refractive index or index of refraction of a material is a dimensionless number that describes how light propagates through that medium. It is defined as n = c / v, where c is the speed of light in vacuum and v is the phase velocity of light in the medium.\n\tFor example, the refractive index of water is 1.333, meaning that light travels 1.333 times faster in a vacuum than it does in water ©Wikipedia</item>
        <item>Spherical correction corrects refractive error of the eye with a single convergent or divergent refractive power in all meridians</item>
        <item>Cylindrical correction corrects astigmatic refractive error of the eye by adding or subtracting power cylindrically in a meridian specified by the prescribed axis</item>
        <item>Axis is present only if there is a value for cylinder. This indicates the angle in degrees of one of two major meridians the prescribed cylindrical power is in. Which major meridian is referenced is indicated by the cylindrical correction being in plus or minus notation</item>
        <item>The base curve (usually determined from the profile of the front surface of an ophthalmic lens) can be changed to result in the best optic and cosmetic characteristics across the entire surface of the lens. Optometrists may choose to specify a particular base curve when prescribing a corrective lens for either of these reasons. A multitude of mathematical formulas and professional clinical experience has allowed optometrists and lens designers to determine standard base curves that are ideal for most people. As a result, the front surface curve is more standardized and the characteristics that generate a person"s unique prescription are typically derived from the geometry of the back surface of the lens</item>
        <item>Thickness in optical center of the lens in millimeters</item>
        <item>Thickness of the lens in edge expressed in millimeters</item>
        <item>Diameter of the lens in millimeters</item>
        <item>Effective diameter is the longest diagonal across the lens</item>
        <item>The shortest distance in millimeters between the nasal edges of each lens. DBL is also commonly referred to as bridge size</item>
        <item>Pupil Distance is the distance (expressed in millimeters) between the centers of the pupils</item>
        <item>Ophthalmologists and a few older optometrists (different types of eye doctors), write astigmatism prescriptions with positive «+» cylinders. This is because many years ago the instruments used to measure and cut lenses were only able to do so in positive increments. Nowadays the majority of labs cut lenses in the negative «-», and require that any positive «+» cylinder prescriptions be converted into the negative «-» equivalent. \n\tExamples:\n\tsph -7.0 cyl -3.0 axis 22° can be written like:\n\tsph -10.0 cyl +3.0 axis 112°\n\tsph +5.75 cyl -1.25 axis 165° can be written like:\n\tsph +4.5 cyl +1.25 axis 75°</item>
    </string-array>
    <!--  Material item list -->
    <string-array name="index_of_refraction" >
        <item>1.498 CR-39</item>
        <item>1.560</item>
        <item>1.530 Trivex</item>
        <item>1.590 Poly</item>
        <item>1.610</item>
        <item>1.670</item>
        <item>1.740</item>
    </string-array>
    <!-- Language -->
    <string-array name="languages_full_names">
        <item>English</item>
        <item>Portuguese</item>
        <item>Українська</item>
    </string-array>
    <string-array name="languages_code">
        <item>en</item>
        <item>po</item>
        <item>uk</item>
    </string-array>

</resources>
