<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/new_app_back">

    <ImageView
        android:id="@+id/closeIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/ic_close_new_app"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/phoneIV"
        android:layout_width="140dp"
        android:layout_height="274dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeIV"
        app:srcCompat="@drawable/new_app_phone"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/downloadACTV"
        style="@style/SimpleText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_app_download"
        android:textColor="@color/FFD90A"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ourNewAppACTV"
        style="@style/SimpleText"
        android:layout_marginTop="4dp"
        android:text="@string/new_app_our_new_app"
        android:textColor="@color/FF85121212"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/downloadACTV"
        app:layout_constraintTop_toBottomOf="@+id/downloadACTV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/b2bPlatformACTV"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_app_b2b_platform"
        android:textColor="@color/FF85121212"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/phoneIV"
        app:layout_constraintStart_toStartOf="@+id/downloadACTV"
        app:layout_constraintTop_toBottomOf="@+id/ourNewAppACTV" />

    <ImageView
        android:id="@+id/step1IV"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/b2bPlatformACTV"
        app:layout_constraintTop_toBottomOf="@+id/b2bPlatformACTV"
        app:srcCompat="@drawable/new_app_1"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/step1ACTV"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/new_app_step_1"
        android:textColor="@color/FF85121212"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/step1IV"
        app:layout_constraintEnd_toStartOf="@+id/phoneIV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/step1IV"
        app:layout_constraintTop_toTopOf="@+id/step1IV" />

    <ImageView
        android:id="@+id/step2IV"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/step1IV"
        app:layout_constraintTop_toBottomOf="@+id/step1IV"
        app:srcCompat="@drawable/new_app_2"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/step2ACTV"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/new_app_step_2"
        android:textColor="@color/FF85121212"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/step2IV"
        app:layout_constraintEnd_toStartOf="@+id/phoneIV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/step2IV"
        app:layout_constraintTop_toTopOf="@+id/step2IV" />

    <ImageView
        android:id="@+id/step3IV"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/step2IV"
        app:layout_constraintTop_toBottomOf="@+id/step2IV"
        app:srcCompat="@drawable/new_app_3"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/step3ACTV"
        style="@style/SimpleText"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/new_app_step_3"
        android:textColor="@color/FF85121212"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/step3IV"
        app:layout_constraintEnd_toStartOf="@+id/phoneIV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/step3IV"
        app:layout_constraintTop_toTopOf="@+id/step3IV" />

    <LinearLayout
        android:id="@+id/buttonOpenOpticLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/phoneIV"
        app:layout_constraintStart_toStartOf="@+id/step3IV"
        app:layout_constraintTop_toBottomOf="@+id/step3IV">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/step2IV"
            app:layout_constraintTop_toBottomOf="@+id/step2IV"
            app:srcCompat="@drawable/ic_play_market"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SimpleText"
                android:layout_width="wrap_content"
                android:text="@string/new_app_get_it_on_google_play"
                android:textColor="@color/FF85121212"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SimpleText"
                android:layout_width="wrap_content"
                android:text="@string/new_app_for_optic"
                android:textColor="@color/FF85121212"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonOpenWorkshopLL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phoneIV"
        app:layout_constraintStart_toStartOf="@+id/step3IV"
        app:layout_constraintTop_toBottomOf="@+id/buttonOpenOpticLL"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/step2IV"
            app:layout_constraintTop_toBottomOf="@+id/step2IV"
            app:srcCompat="@drawable/ic_play_market"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SimpleText"
                android:layout_width="wrap_content"
                android:text="@string/new_app_get_it_on_google_play"
                android:textColor="@color/FF85121212"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SimpleText"
                android:layout_width="wrap_content"
                android:text="@string/new_app_for_workshop"
                android:textColor="@color/FF85121212"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>