<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_sphere"
        style="@style/TextInputWrapper"
        android:layout_marginTop="14dp"
        android:hint="@string/transposition_power_sphere"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_edit_text_sphere"
            style="@style/TextInputEditText"
            android:imeOptions="actionNext"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_cylinder"
        style="@style/TextInputWrapper"
        android:layout_marginTop="8dp"
        android:hint="@string/transposition_power_cylinder"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_sphere">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_edit_text_cylinder"
            style="@style/TextInputEditText"
            android:imeOptions="actionNext"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_axis"
        style="@style/TextInputWrapper"
        android:layout_marginTop="8dp"
        android:hint="@string/transposition_axis"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_cylinder">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_edit_text_axis"
            style="@style/TextInputEditText"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        android:lineSpacingExtra="8dp"
        style="@style/SimpleText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/image_view_info_transposition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_axis"
        tools:text="sphere +5 cylinder -1 axis 93" />

    <ImageView
        android:id="@+id/image_view_info_transposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_result"
        app:srcCompat="@drawable/ic_outline_info_24"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>